# alumina-price-getter

./: .gitignore  README.md  pyproject.toml
scripts/: index.gs  processPrices.gs
src/: main.py
src/client/: driver.py  imap.py
src/logs/: mixin.py
src/models/: credentials.py
src/pages/: base.py  lme.py
src/pages/metal/: al.py  base.py  ti.py
src/settings/: config.py  credentials.py
src/validators/: credentials.py
